# Polos

./: .gitignore  AGENTS.md  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  PROJECT_CONTEXT.md  README.md  SECURITY.md  mesh.config.yaml  models.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_adapter.md
.github/workflows/: validate.yml
adapters/: AGENTS.md  claude-code.md  codex.md  generic.md  langgraph.md  vscode-copilot.md
audit/: AGENTS.md
backpacks/: AGENTS.md
constitution/: AGENTS.md  core.md
contracts/: AGENTS.md  envelope.schema.json  flow.graph.yaml  state-machine.md
docs/: AGENTS.md  ARCHITECTURE.md  EXAMPLE-TRACE.md  LOOPING.md  NURSE.md  PLAYBOOKS.md  POLOS-RESEARCH-PAPER.md  SELF-IMPROVEMENT.md
environment/: AGENTS.md
experience/: AGENTS.md
loops/: AGENTS.md
oversight/: AGENTS.md
polos/: AGENTS.md  __init__.py  cli.py
roles/: AGENTS.md  _TEMPLATE.agent.md  alpha.agent.md  archivist.agent.md  evaluator.agent.md  execution-worker.agent.md  learning.agent.md  loop-controller.agent.md  monitor.agent.md  nurse.agent.md  qc.agent.md  retrieval-worker.agent.md  router.agent.md  security.agent.md  taskmaster.agent.md  verifier.agent.md
tests/: AGENTS.md  test_audit_reader.py  test_cli.py  test_evaluation.py  test_grants.py  test_loop_controller.py  test_models_adapters.py  test_policy_engine.py  test_roles.py  test_task_contract.py  test_tool_gateway.py  test_verification.py
tools/: AGENTS.md  requirements.txt  validate_mesh.py
(+84 files in other folders)
